--- a/uml/umls.html
+++ b/uml/umls.html
@@ -4,6 +4,10 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
+
+        span {
+            font-weight: 700;
+        }
         .accordion {
             background-color: #eee;
             color: #444;
@@ -33,15 +37,15 @@
 
 <body>
 
-    <h2>UML Diagrams</h2>
-    <p><a href="https://drawio-app.com/uml-diagrams/">Which diagram to use and why! / By Kymberly Fergusson</a></p>
+    <h2>UML Diagrams - Which diagram to use and why! </h2>
+    <p><a href="https://drawio-app.com/uml-diagrams/">By Kymberly Fergusson</a></p>
 
     <p>The Unified Modeling Language (UML) is a diagramming notation (language) that lets you visualize systems and software. It’s one of the most popular forms of diagramming in software development and became an ISO standard in 1997.  Since then, there have been a few updates to add extra UML diagram types and to support new technologies in programming.</p>
     <p>There are two main categories and 14 different types of UML diagrams, each of which is used in a different situation.</p>
 
     <ul>
-        <li><b>Structure diagrams:</b> show the static relationships between the components in the system.</li>
-        <li><b>Behavior diagrams:</b> show how the components in the system react to each other, they capture how the system changes, and in some diagrams, how it changes over time.</li>
+        <li><span>Structure diagrams:</span> show the static relationships between the components in the system.</li>
+        <li><span>Behavior diagrams:</span> show how the components in the system react to each other, they capture how the system changes, and in some diagrams, how it changes over time.</li>
     </ul>
 
     <img style width="800px" src="../images/UMLdiagrams.png" alt="UML Diagrams">
