--- a/uml/umls.html
+++ b/uml/umls.html
@@ -109,7 +109,7 @@
     </div>
 
     <footer style="text-align: center; margin-top: 5rem;">
-        REMINDER : "HEI, OLED TUBLI!""
+        Copyright 2022 &#169 D.M.K
     </footer>
 
     <script>
