Add Shades & Colours Database

--- a/models/models.html
+++ b/models/models.html
@@ -75,6 +75,10 @@
 
         <img src="../images/agilemudel.png.png" alt="" width="500px">
         </div>
+
+        <footer style="text-align: center; margin-top: 5rem;">
+            Copyright 2022 &#169 D.M.K
+        </footer>
         
         <script>
         var acc = document.getElementsByClassName("accordion");
