--- a/models/progstyles.html
+++ b/models/progstyles.html
@@ -113,6 +113,10 @@
             tüüpiliste struktuuride massiiviga.</p>
 
         </div>
+        
+        <footer style="text-align: center; margin-top: 5rem;">
+            Copyright 2022 &#169 D.M.K
+        </footer>
 
         <script>
             var acc = document.getElementsByClassName("accordion");
