--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <li><a href="uml/umls.html">UML Diagrams</a></li>
         <li><a href="models/progstyles.html">Programming Styles</a></li>
         <li><a href="erd/erd.html">ERD</a></li>
+        <li><a href="git/git-notes.html">Git and GitHub</a></li>
     </ul>
     
 </body>
