Add Coming Soon With Countdown

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SDLC Main Page</title>
 </head>
@@ -16,11 +17,14 @@
         <li><a href="models/progstyles.html">Programming Styles</a></li>
         <li><a href="erd/erd.html">ERD</a></li>
         <li><a href="git/git-notes.html">Git and GitHub</a></li>
-        <li><a href="https://markiine.github.io/TARge21_ComingSoon/" target="_blank">Coming Soon Landing Page With Countdown</a></li>
+        
     </ul>
 
+    <h2>Coming Soon With Countdown</h2>
+    <p>
+        <a href="https://markiine.github.io/TARge21_ComingSoonApp/" target="_blank">Coming Soon Landing Page</a>
+    </p>
     
-
 
 
 
